--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spaseq",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://paulmayer-tsp.github.io/rdf-fusion",
   "dependencies": {
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
@@ -10,6 +11,7 @@
     "classnames": "^2.2.6",
     "d3": "^5.12.0",
     "formik": "^1.5.8",
+    "gh-pages": "^3.1.0",
     "html2canvas": "^1.0.0-rc.5",
     "isomorphic-fetch": "^2.2.1",
     "jspdf": "^1.5.3",
@@ -25,6 +27,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
